Fixed z-index of sidebar against category label

--- a/src/scss/modules/_magazine-sidebar.scss
+++ b/src/scss/modules/_magazine-sidebar.scss
@@ -27,7 +27,7 @@ div#c2-magazine-sidebar {
         display: none;
         top: calc(#{$c2-magazine-topbar-size} + 2.4rem);  // TODO Height of "Dette er"-bar as variable, also in magazine-c2.scss
         width: 100%;
-        z-index: 1;
+        z-index: 2;
     }
 }
 
@@ -181,7 +181,7 @@ div.c2-magazine-sidebar-tab .icon-husOgHage {
     div#c2-magazine-topbar {
         visibility: visible;
         display: block;
-        z-index: 1;
+        z-index: 2;
 
         position: fixed;
         top: 2.4rem;
